[project]
name = "dh-mood-tracker"
version = "0.1.0"
description = "Бизнес-логика трекера настроения"
authors = [
    {name = "John_Soi",email = "un.perso@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "supabase (>=2.20.0,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dh_mood_tracker"}]


[tool.poetry.group.dev.dependencies]
pydevd-pycharm = "^253.20558.58"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
